--- a/forms/main.html
+++ b/forms/main.html
@@ -20,17 +20,17 @@
             <ul class="menu__list">
               <li class="menu__item">
                 <div class="menu__title">
-                  <a href="../forms/main.html" class="menu__link">Главная</a>
+                  <a href="./main.html" class="menu__link">Главная</a>
                 </div>
               </li>
               <li class="menu__item">
                 <div class="menu__title">
-                  <a href="../forms/services.html" class="menu__link">Услуги</a>
+                  <a href="./services.html" class="menu__link">Услуги</a>
                 </div>
               </li>
               <li class="menu__item">
                 <div class="menu__title">
-                  <a href="../forms/reviews.html" class="menu__link">Отзывы</a>
+                  <a href="./reviews.html" class="menu__link">Отзывы</a>
                 </div>
               </li>
             </ul>
