--- a/forms/services.html
+++ b/forms/services.html
@@ -9,7 +9,7 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <a href="/forms/main.html" class="logo">
+        <a href="./main.html" class="logo">
           <img
             src="../img/logo/logo-vertical.png"
             alt="logo"
@@ -21,17 +21,17 @@
             <ul class="menu__list">
               <li class="menu__item">
                 <div class="menu__title">
-                  <a href="/forms/main.html" class="menu__link">Главная</a>
+                  <a href="./main.html" class="menu__link">Главная</a>
                 </div>
               </li>
               <li class="menu__item">
                 <div class="menu__title">
-                  <a href="/forms/services.html" class="menu__link">Услуги</a>
+                  <a href="./services.html" class="menu__link">Услуги</a>
                 </div>
               </li>
               <li class="menu__item">
                 <div class="menu__title">
-                  <a href="/forms/reviews.html" class="menu__link">Отзывы</a>
+                  <a href="./reviews.html" class="menu__link">Отзывы</a>
                 </div>
               </li>
             </ul>
@@ -211,7 +211,7 @@
         </div>
       </main>
       <footer class="footer">
-        <a href="/forms/main.html" class="logo">
+        <a href="./main.html" class="logo">
           <img
             src="../img/logo/logo-vertical.png"
             alt="logo"
@@ -223,17 +223,17 @@
             <ul class="menu__list">
               <li class="menu__item">
                 <div class="menu__title">
-                  <a href="/forms/main.html" class="menu__link">Главная</a>
+                  <a href="./main.html" class="menu__link">Главная</a>
                 </div>
               </li>
               <li class="menu__item">
                 <div class="menu__title">
-                  <a href="/forms/services.html" class="menu__link">Услуги</a>
+                  <a href="./services.html" class="menu__link">Услуги</a>
                 </div>
               </li>
               <li class="menu__item">
                 <div class="menu__title">
-                  <a href="/forms/reviews.html" class="menu__link">Отзывы</a>
+                  <a href="./reviews.html" class="menu__link">Отзывы</a>
                 </div>
               </li>
             </ul>
