--- a/forms/reviews.html
+++ b/forms/reviews.html
@@ -60,10 +60,10 @@
         <div class="revew-members">
           <ul class="revew-members__">
             <li class="revew-members__item">
-              <img src="/img/reviews/ginger.jpg" alt="photo" />
+              <img src="../img/reviews/ginger.jpg" alt="photo" />
               <div>
                 <h4>Иван</h4>
-                <img src="/img/logo/vk-colored.png" alt="logo-vk" />
+                <img src="../img/logo/vk-colored.png" alt="logo-vk" />
                 <ul>
                   <li>Карта банка</li>
                   <li>Ипотека</li>
@@ -79,10 +79,10 @@
               <div class="data">Ноябрь 2019</div>
             </li>
             <li class="revew-members__item">
-              <img src="/img/reviews/girl.jpg" alt="photo" />
+              <img src="../img/reviews/girl.jpg" alt="photo" />
               <div>
                 <h4>Екатерина</h4>
-                <img src="/img/logo/vk-colored.png" alt="logo-vk" />
+                <img src="../img/logo/vk-colored.png" alt="logo-vk" />
                 <ul>
                   <li>Ипотека</li>
                 </ul>
@@ -97,10 +97,10 @@
               <div class="data">Ноябрь 2019</div>
             </li>
             <li class="revew-members__item">
-              <img src="/img/reviews/liza.jpg" alt="photo" />
+              <img src="../img/reviews/liza.jpg" alt="photo" />
               <div>
                 <h4>Лиза</h4>
-                <img src="/img/logo/vk-colored.png" alt="logo-vk" />
+                <img src="../img/logo/vk-colored.png" alt="logo-vk" />
                 <ul>
                   <li>Карта банка</li>
                 </ul>
@@ -115,10 +115,10 @@
               <div class="data">Ноябрь 2019</div>
             </li>
             <li class="revew-members__item">
-              <img src="/img/reviews/guy.jpg" alt="photo" />
+              <img src="../img/reviews/guy.jpg" alt="photo" />
               <div>
                 <h4>Антон</h4>
-                <img src="/img/logo/vk-colored.png" alt="logo-vk" />
+                <img src="../img/logo/vk-colored.png" alt="logo-vk" />
                 <ul>
                   <li>Автокредит</li>
                 </ul>
@@ -150,7 +150,7 @@
         </div>
         <div class="mobile">
           <img
-            src="/img/reviews/phone-n-hand.png"
+            src="../img/reviews/phone-n-hand.png"
             alt="phone"
             class="mobile__img"
           />
